--- a/style.css
+++ b/style.css
@@ -55,11 +55,11 @@ img {
   align-items: center;
   margin-inline: auto;
 }
-.footer{
-    width: min(1400px, (100% - 2rem));
-    display: flex;
-    justify-content: center;
-    margin-inline: auto;
+.footer {
+  width: min(1400px, (100% - 2rem));
+  display: flex;
+  justify-content: center;
+  margin-inline: auto;
 }
 
 .logo-cta {
@@ -100,6 +100,7 @@ img {
   margin: 0;
   font-size: 1rem;
   height: 24px;
+  min-width: 100px;
   width: 200px;
   padding: 1rem;
   background-color: var(--white);
@@ -308,7 +309,6 @@ footer {
   h1 {
     text-align: center;
   }
-
   .footer-input {
     width: 100%;
     flex-direction: column;
@@ -325,8 +325,17 @@ footer {
 }
 
 @media (width < 750px) {
+  .huddle-logo {
+    max-width: 120px;
+  }
+  .cta {
+    font-size: 0.9rem;
+  }
+  .cta-try {
+    max-width: 40px;
+  }
   .logo-cta {
-    padding: 0 2rem;
+    padding: 0 0;
   }
   .card {
     display: flex;
@@ -366,13 +375,19 @@ footer {
     flex-direction: column;
     gap: 10rem;
   }
+  .community div span:nth-of-type(1) {
+    font-size: 4.5rem;
+  }
+  .community div span:nth-of-type(2) {
+    font-size: 1.2rem;
+  }
   .footer-input > input {
     width: 100%;
   }
   .footer-input {
     width: 95%;
   }
-  .footer{
+  .footer {
     flex-direction: column-reverse;
   }
 }
